<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:locale="en">
    <string name="title_create_account">Create Account</string>
    <string name="title_edit_account">Edit Account</string>
    <string name="description_add_transaction_icon">Add a new transaction to an account</string>
    <string name="description_view_account_icon">View account details</string>
    <string name="label_no_accounts">No accounts to display</string>
    <string name="account_name">Account Name</string>
    <string name="btn_save">Save</string>
    <string name="btn_test">Test</string>
    <string name="label_passcode">Enter Passcode</string>
    <string name="toast_wrong_passcode">Wrong passcode, please try again</string>
    <string name="toast_passcode_set">Passcode set</string>
    <string name="label_confirm_passcode">Please confirm your passcode</string>
    <string name="toast_invalid_passcode_confirmation">Invalid passcode confirmation. Please try again</string>
    <string name="description">Description</string>
    <string name="label_transaction_amount">Amount</string>
    <string name="title_add_transaction">New transaction</string>
    <string name="label_no_transactions">No transactions to display</string>
    <string name="label_debit">Debit</string>
    <string name="label_credit">Credit</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_transactions">Transactions</string>
    <string name="menu_delete">Delete</string>
    <string name="alert_dialog_ok_delete">Delete</string>
    <string name="title_delete_account">Delete Account</string>
    <string name="toast_account_deleted">Account deleted</string>
    <string name="title_confirm_delete">Confirm delete</string>
    <string name="title_edit_transaction">Edit Transaction</string>
    <string name="label_transaction_description">Add note</string>
    <string name="title_selected">%1$d selected</string>
    <string name="label_account_balance">Balance:</string>
    <string name="label_export_destination">Export To:</string>
    <string name="title_export_dialog">Export Transactions</string>
    <string name="hint_export_choice">By default, only new transactions since last export will be exported. Check this option to export all transactions</string>
    <string name="toast_export_error">Error exporting %1$s file</string>
    <string name="btn_export">Export</string>
    <string name="option_delete_after_export">Delete transactions after export</string>
    <string name="hint_delete_after_export">All exported transactions will be deleted when exporting is completed</string>
    <string name="title_settings">Settings</string>
    <string-array name="export_destinations">
        <item>Save As…</item>
        <item>Dropbox</item>
        <item>ownCloud</item>
        <item>Send to…</item>
    </string-array>
    <string name="btn_move">Move</string>
    <string name="title_move_transactions">Move %1$d transaction(s)</string>
    <string name="label_move_destination">Destination Account</string>
    <string name="toast_incompatible_currency">Cannot move transactions.\nThe destination account uses a different currency from origin account</string>
    <string name="header_general_settings">General</string>
    <string name="header_about_gnucash">About</string>
    <string name="title_choose_currency">Choose default currency</string>
    <string name="title_default_currency">Default currency</string>
    <string name="summary_default_currency">Default currency to assign to new accounts</string>
    <string name="label_permission_record_transactions">Enables recording transactions in GnuCash for Android</string>
    <string name="label_permission_create_accounts">Enables creation of accounts in GnuCash for Android</string>
    <string name="label_permission_group">Your GnuCash data</string>
    <string name="description_permission_group">Read and modify GnuCash data</string>
    <string name="label_permission_record_transaction">Record transactions in GnuCash</string>
    <string name="label_permission_create_account">Create accounts in GnuCash</string>
    <string name="label_display_account">Display account</string>
    <string name="label_hide_account_balance">Hide account balance in widget</string>
    <string name="btn_create_accounts">Create Accounts</string>
    <string name="error_no_accounts">No accounts exist in GnuCash.\nCreate an account before adding a widget</string>
    <string name="title_license">License</string>
    <string name="summary_licence_details">Apache License v2.0. Click for details</string>
    <string name="title_general_prefs">General Preferences</string>
    <string name="label_widget_configuration">Select Account</string>
    <string name="toast_no_transactions_to_export">There are no transactions available to export</string>
    <string name="title_passcode_preferences">Passcode Preferences</string>
    <string name="title_enable_passcode">Enable passcode</string>
    <string name="title_change_passcode">Change Passcode</string>
    <string name="title_about_gnucash">About GnuCash</string>
    <string name="title_export_email">GnuCash %1$s export</string>
    <string name="description_export_email">GnuCash Pocket Export from</string>
    <string name="header_transaction_settings">Transactions</string>
    <string name="title_transaction_preferences">Transaction Preferences</string>
    <string name="title_account_preferences">Account Preferences</string>
    <string name="title_default_transaction_type">Default Transaction Type</string>
    <string name="summary_default_transaction_type">The type of transaction to use by default, CREDIT or DEBIT</string>
    <string name="msg_delete_all_transactions_confirmation">Are you sure you want to delete ALL transactions?</string>
    <string name="msg_delete_transaction_confirmation">Are you sure you want to delete this transaction?</string>
    <string name="title_export_preference_category">Export</string>
    <string name="title_export_all_transactions">Export all transactions</string>
    <string name="title_always_delete_exported_transactions">Delete exported transactions</string>
    <string name="title_default_export_email">Default export email</string>
    <string name="summary_default_export_email">The default email address to send exports to. You can still change this when you export.</string>
    <string name="summary_use_double_entry">All transactions will be a transfer from one account to another</string>
    <string name="title_use_double_entry">Activate Double Entry</string>
    <string name="account_balance">Balance</string>
    <string name="toast_no_account_name_entered">Enter an account name to create an account</string>
    <string name="label_account_currency">Currency</string>
    <string name="label_parent_account">Parent account</string>
    <string name="title_xml_ofx_header">Use XML OFX header</string>
    <string name="summary_xml_ofx_header">Enable this option when exporting to third-party application other than GnuCash for desktop</string>
    <string name="toast_transaction_amount_required">Enter an amount to save the transaction</string>
    <string name="toast_error_importing_accounts">An error occurred while importing the GnuCash accounts</string>
    <string name="toast_success_importing_accounts">GnuCash Accounts successfully imported</string>
    <string name="summary_import_accounts">Import account structure from GnuCash XML</string>
    <string name="title_import_accounts">Import GnuCash XML</string>
    <string name="summary_delete_all_accounts">Delete all accounts in the database. All transactions will be deleted as well.</string>
    <string name="title_delete_all_accounts">Delete all accounts</string>
    <string name="header_account_settings">Accounts</string>
    <string name="toast_all_accounts_deleted">All accounts have been successfully deleted</string>
    <string name="confirm_delete_all_accounts">Are you sure you want to delete all accounts and transactions?\n\nThis operation cannot be undone!</string>
    <string name="summary_delete_all_transactions">All transactions in all accounts will be deleted!</string>
    <string name="title_delete_all_transactions">Delete all transactions</string>
    <string name="toast_all_transactions_deleted">All transactions successfully deleted!</string>
    <string name="title_progress_importing_accounts">Importing accounts</string>
    <string name="section_header_transactions">Transactions</string>
    <string name="section_header_subaccounts">Sub-Accounts</string>
    <string name="menu_search_accounts">Search</string>
    <string name="title_default_export_format">Default Export Format</string>
    <string name="summary_default_export_format">File format to use by default when exporting transactions</string>
    <string name="label_recurring_transaction">Recurrence</string>
    <string name="imbalance_account_name">Imbalance</string>
    <string name="title_progress_exporting_transactions">Exporting transactions</string>
    <string name="label_no_recurring_transactions">No recurring transactions to display.</string>
    <string name="toast_recurring_transaction_deleted">Successfully deleted recurring transaction</string>
    <string name="placeholder">Placeholder</string>
    <string name="label_default_transfer_account">Default Transfer Account</string>
    <plurals name="label_sub_accounts">
        <item quantity="one">%d sub-account</item>
        <item quantity="other">%d sub-accounts</item>
    </plurals>
    <string-array name="account_type_entry_values">
        <item>CASH</item>
        <item>BANK</item>
        <item>CREDIT CARD</item>
        <item>ASSET</item>
        <item>LIABILITY</item>
        <item>INCOME</item>
        <item>EXPENSE</item>
        <item>PAYABLE</item>
        <item>RECEIVABLE</item>
        <item>EQUITY</item>
        <item>CURRENCY</item>
        <item>STOCK</item>
        <item>MUTUAL FUND</item>
        <item>TRADING</item>
    </string-array>
    <string name="file_format_csv">Comma-separated values</string>
    <string name="label_delete_sub_accounts">Delete sub-accounts</string>
    <string name="menu_title_favorite">Favourite</string>
    <string name="title_pie_chart">Pie Chart</string>
    <string name="title_line_chart">Line Chart</string>
    <string name="title_bar_chart">Bar Chart</string>
    <string name="label_delete_account_transactions_description">This account contains transactions.\nWhat would you like to do with these transactions?</string>
    <string name="title_report_sheet">Sheet</string>
    <string name="label_last_3_months_expenses">Expenses for last 3 months</string>
    <string name="label_total_assets">Total Assets</string>
    <string name="label_total_liabilities">Total Liabilities</string>
    <string name="label_net_worth">Net Worth</string>
    <string name="label_move_to">Move to:</string>
    <string name="menu_move_transaction">Move…</string>
    <string name="menu_duplicate_transaction">Duplicate</string>
    <string name="digit_one">1</string>
    <string name="digit_one_text" />
    <string name="digit_two">2</string>
    <string name="digit_two_text">ABC</string>
    <string name="digit_three">3</string>
    <string name="digit_three_text">DEF</string>
    <string name="digit_four">4</string>
    <string name="digit_four_text">GHI</string>
    <string name="digit_five">5</string>
    <string name="digit_five_text">JKL</string>
    <string name="digit_six">6</string>
    <string name="digit_six_text">MNO</string>
    <string name="digit_seven">7</string>
    <string name="digit_seven_text">PQRS</string>
    <string name="digit_eight">8</string>
    <string name="digit_eight_text">TUV</string>
    <string name="digit_nine">9</string>
    <string name="digit_nine_text">WXYZ</string>
    <string name="digit_zero">0</string>
    <string name="digit_zero_text">+</string>
</resources>