<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <LinearLayout
            android:id="@+id/one_btn"
            android:layout_width="@dimen/passcode_btn"
            android:layout_height="@dimen/passcode_btn"
            android:layout_margin="@dimen/passcode_btn_margin"
            android:background="@drawable/numeric_button"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_one"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_one_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/two_btn"
            android:layout_width="@dimen/passcode_btn"
            android:layout_height="@dimen/passcode_btn"
            android:layout_margin="@dimen/passcode_btn_margin"
            android:background="@drawable/numeric_button"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_two"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_two_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/three_btn"
            android:layout_width="@dimen/passcode_btn"
            android:layout_height="@dimen/passcode_btn"
            android:layout_margin="@dimen/passcode_btn_margin"
            android:background="@drawable/numeric_button"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_three"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_three_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/four_btn"
            android:layout_width="@dimen/passcode_btn"
            android:layout_height="@dimen/passcode_btn"
            android:layout_margin="@dimen/passcode_btn_margin"
            android:background="@drawable/numeric_button"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_four"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_four_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/five_btn"
            android:layout_width="@dimen/passcode_btn"
            android:layout_height="@dimen/passcode_btn"
            android:layout_margin="@dimen/passcode_btn_margin"
            android:background="@drawable/numeric_button"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_five"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_five_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/six_btn"
            android:layout_width="@dimen/passcode_btn"
            android:layout_height="@dimen/passcode_btn"
            android:layout_margin="@dimen/passcode_btn_margin"
            android:background="@drawable/numeric_button"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_six"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_six_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/seven_btn"
            android:layout_width="@dimen/passcode_btn"
            android:layout_height="@dimen/passcode_btn"
            android:layout_margin="@dimen/passcode_btn_margin"
            android:background="@drawable/numeric_button"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_seven"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_seven_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/eight_btn"
            android:layout_width="@dimen/passcode_btn"
            android:layout_height="@dimen/passcode_btn"
            android:layout_margin="@dimen/passcode_btn_margin"
            android:background="@drawable/numeric_button"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_eight"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_eight_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nine_btn"
            android:layout_width="@dimen/passcode_btn"
            android:layout_height="@dimen/passcode_btn"
            android:layout_margin="@dimen/passcode_btn_margin"
            android:background="@drawable/numeric_button"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_nine"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_nine_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <View
            android:layout_width="@dimen/passcode_btn"
            android:layout_height="@dimen/passcode_btn"
            android:layout_margin="@dimen/passcode_btn_margin"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/zero_btn"
            android:layout_width="@dimen/passcode_btn"
            android:layout_height="@dimen/passcode_btn"
            android:layout_margin="@dimen/passcode_btn_margin"
            android:background="@drawable/numeric_button"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_zero"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digit_zero_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/delete_btn"
            android:layout_width="@dimen/passcode_btn"
            android:layout_height="@dimen/passcode_btn"
            android:layout_margin="@dimen/passcode_btn_margin"
            android:background="@drawable/numeric_button"
            android:contentDescription="\u232B"
            android:hapticFeedbackEnabled="true"
            android:src="@drawable/ic_backspace" />
    </TableRow>

</TableLayout>
