<!--
Copyright (c) 2015 Ngewi Fet <ngewif@gmail.com>

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <Button
                android:id="@+id/btn_pie_chart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_pie_chart"
                android:text="@string/title_pie_chart"
                android:backgroundTint="@color/report_orange" />

            <Button
                android:id="@+id/btn_bar_chart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_bar_chart"
                android:text="@string/title_bar_chart"
                android:backgroundTint="@color/report_red" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_line_chart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_line_chart"
                android:text="@string/title_line_chart"
                android:backgroundTint="@color/report_blue" />

            <Button
                android:id="@+id/btn_balance_sheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_balance"
                android:text="@string/title_report_sheet"
                android:backgroundTint="@color/report_purple" />

        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edge_padding"
        android:text="@string/label_last_3_months_expenses"
        android:textAppearance="?android:textAppearanceMedium" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_report_summary_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:minHeight="300dp">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edge_padding">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dialog_padding">

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_total_assets"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:id="@+id/total_assets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textAppearance="?android:textAppearanceMedium"
                    tools:text="$ 2,500" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_total_liabilities"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:id="@+id/total_liabilities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textAppearance="?android:textAppearanceMedium"
                    tools:text="$ 2,700" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_net_worth"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/net_worth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textStyle="bold"
                    tools:text="$ -200" />
            </TableRow>
        </TableLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>